solve initially invisible columns not rendering

--- a/src/components/EkPlan/Table/Row/index.module.css
+++ b/src/components/EkPlan/Table/Row/index.module.css
@@ -2,6 +2,8 @@
   display: flex;
   height: 60px;
   min-height: 60px;
-  content-visibility: auto;
+  /* WARNING: this prevented initially unshown columns from being rendered */
+  /* even after scrolling them into the visible area */
+  /* content-visibility: auto; */
   contain-intrinsic-size: auto 60px;
 }
